<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <FrameLayout
        android:id="@+id/header_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/Dry_Goods">


        <TextView
            android:id="@+id/pageHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textSize="50sp"
            android:textColor="@color/Black"
            android:textAlignment="center"
            android:text="@string/home_page_name" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header_frame"
        app:layout_constraintBottom_toTopOf="@+id/footer_frame"
        android:background="@color/Dry_Goods"
        android:orientation="vertical">

        <TextView
            android:id="@+id/friend1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filler"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/French_Grey"
        android:orientation="horizontal">

        <Button
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/French_Grey"
            android:layout_weight="0.5"
            android:textColor="@color/Toasted_Caramel"
            android:text="@string/account" />

        <Button
            android:id="@+id/newPal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/French_Grey"
            android:layout_weight="0.5"
            android:textColor="@color/Toasted_Caramel"
            android:text="@string/new_friend" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>